feat(tests): add comprehensive team reports test suite
- Implemented a new test suite for team reports covering page loading, report creation, management, and search functionalities.
- Added Firebase index verification tests to ensure proper deployment and functionality.
- Enhanced authentication helper for improved login handling.
- Consolidated visual regression tests for better organization and coverage across various components and pages.
- Updated user credentials in users.json for testing purposes.

--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
   "scripts": {
     "dev": "cross-env NODE_OPTIONS='--max-old-space-size=3072' next dev --turbopack",
     "dev:webpack": "cross-env NODE_OPTIONS='--max-old-space-size=3072' next dev",
-    "dev-no-turbopack": "cross-env NODE_OPTIONS='--max-old-space-size=3072' next dev",
+    "dev-no-turbopack": "cross-env NODE_OPTIONS='--max-old-space-size=6144' next dev",
     "dev:turbo": "cross-env NODE_OPTIONS='--max-old-space-size=3072' next dev --turbopack",
     "dev:fast": "cross-env NODE_OPTIONS='--max-old-space-size=3072' next dev --turbopack --experimental-https",
     "dev:clean": "npm run clean && cross-env NODE_OPTIONS='--max-old-space-size=3072' next dev",
     "genkit:dev": "cross-env NODE_OPTIONS='--max-old-space-size=2048' genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "cross-env NODE_OPTIONS='--max-old-space-size=2048' genkit start -- tsx --watch src/ai/dev.ts",
-    "build": "cross-env NODE_OPTIONS='--max-old-space-size=8192' ESLINT_NO_DEV_ERRORS=true next build",
-    "build:analyze": "cross-env ANALYZE=true NODE_OPTIONS='--max-old-space-size=8192' ESLINT_NO_DEV_ERRORS=true next build",
-    "build:fast": "cross-env NODE_OPTIONS='--max-old-space-size=6144' ESLINT_NO_DEV_ERRORS=true next build",
+    "build": "cross-env NODE_OPTIONS='--max-old-space-size=6144' ESLINT_NO_DEV_ERRORS=true next build",
+    "build:analyze": "cross-env ANALYZE=true NODE_OPTIONS='--max-old-space-size=6144' ESLINT_NO_DEV_ERRORS=true next build",
+    "build:fast": "cross-env NODE_OPTIONS='--max-old-space-size='6144 ESLINT_NO_DEV_ERRORS=true next build",
     "build:emergency": "cross-env ESLINT_NO_DEV_ERRORS=true DISABLE_ESLINT=true node scripts/build-skip-typecheck.js",
     "build:production": "npm run clean && npm run optimize && npm run build",
     "start": "cross-env NODE_OPTIONS='--max-old-space-size=2048' next start",
@@ -58,25 +58,39 @@
     "db:get-users": "npx ts-node scripts/get-all-users.ts",
     "db:setup": "npm run db:populate && npm run db:verify && npm run db:test-all",
     "precommit": "npm run lint:fix && npm run typecheck && npm run optimize",
-    "test": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/test.config.ts",
-    "test:auth": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/test.config.ts testing/specs/main/auth-consolidated.spec.ts",
-    "test:mobile": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/test.config.ts testing/specs/main/mobile-nav-consolidated.spec.ts",
-    "test:visual": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/test.config.ts testing/specs/main/visual-regression.spec.ts",
-    "test:api": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/test.config.ts testing/specs/main/api-contracts.spec.ts",
-    "test:accessibility": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/test.config.ts testing/specs/main/accessibility.spec.ts",
-    "test:performance": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/test.config.ts testing/specs/main/performance.spec.ts",
-    "test:features": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/test.config.ts testing/specs/main/features/",
-    "test:e2e": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/test.config.ts testing/specs/main/public-pages-e2e.spec.ts",
-    "test:critical": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/test.config.ts testing/specs/main/auth-consolidated.spec.ts testing/specs/main/performance.spec.ts testing/specs/main/accessibility.spec.ts",
-    "test:headed": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/test.config.ts --headed",
-    "test:ui": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/test.config.ts --ui",
-    "test:prod": "cross-env NODE_OPTIONS='--max-old-space-size=2048' TEST_BASE_URL=https://rankpilot-h3jpc.web.app playwright test --config=testing/configs/test.config.ts",
-    "test:update-snapshots": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=testing/configs/test.config.ts --update-snapshots",
+    "test": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.role-based.ts",
+    "test:auth": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.role-based.ts --project=legacy-tests testing/specs/main/auth-consolidated.spec.ts",
+    "test:mobile": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.role-based.ts --project=legacy-tests testing/specs/main/mobile-nav-consolidated.spec.ts",
+    "test:visual": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.role-based.ts --project=visual-regression",
+    "test:api": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.role-based.ts --project=api-testing",
+    "test:accessibility": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.role-based.ts --project=accessibility",
+    "test:performance": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.role-based.ts --project=legacy-tests testing/specs/main/performance.spec.ts",
+    "test:features": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.role-based.ts --project=legacy-tests testing/specs/main/features/",
+    "test:ai-heavy": "cross-env NODE_OPTIONS='--max-old-space-size=1024' playwright test --config=playwright.config.ai-heavy.ts --workers=1",
+    "test:content-analyzer": "cross-env NODE_OPTIONS='--max-old-space-size=1024' playwright test --config=playwright.config.ai-heavy.ts --workers=1 testing/specs/main/features/content-analyzer.spec.ts",
+    "test:warmed": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.warming.ts",
+    "test:warmed:content-analyzer": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.warming.ts testing/specs/main/features/content-analyzer-warmed.spec.ts",
+    "test:warmed:features": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.warming.ts testing/specs/main/features/",
+    "test:warmed:fast": "cross-env NODE_OPTIONS='--max-old-space-size=1536' playwright test --config=playwright.config.warming.ts --project=warmed-tests",
+    "test:e2e": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.role-based.ts --project=legacy-tests testing/specs/main/public-pages-e2e.spec.ts",
+    "test:critical": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.role-based.ts --project=legacy-tests --workers=1 testing/specs/main/auth-consolidated.spec.ts testing/specs/main/accessibility.spec.ts testing/specs/main/performance.spec.ts",
+    "test:critical:sequential": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.role-based.ts --project=legacy-tests --workers=1 --fully-parallel=false testing/specs/main/auth-consolidated.spec.ts && cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.role-based.ts --project=legacy-tests --workers=1 testing/specs/main/accessibility.spec.ts && cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.role-based.ts --project=legacy-tests --workers=1 testing/specs/main/performance.spec.ts",
+    "test:headed": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.role-based.ts --headed",
+    "test:ui": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.role-based.ts --ui",
+    "test:prod": "cross-env NODE_OPTIONS='--max-old-space-size=2048' TEST_BASE_URL=https://rankpilot-h3jpc.web.app playwright test --config=playwright.config.role-based.ts",
+    "test:update-snapshots": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.role-based.ts --update-snapshots",
     "test:role-based:enterprise": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.role-based.ts --project=enterprise-tier-worker",
     "test:role-based:compatibility": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.role-based.ts --project=firefox-compatibility",
     "test:role-based:windows": "powershell -ExecutionPolicy Bypass -File scripts/run-role-based-tests.ps1",
+    "test:comprehensive": "bash scripts/run-comprehensive-tests.sh --suite all",
+    "test:comprehensive:critical": "bash scripts/run-comprehensive-tests.sh --suite critical",
+    "test:comprehensive:features": "bash scripts/run-comprehensive-tests.sh --suite features",
+    "test:comprehensive:headed": "bash scripts/run-comprehensive-tests.sh --suite all --headed",
+    "test:comprehensive:production": "bash scripts/run-comprehensive-tests.sh --suite all --production",
     "analyze": "cross-env ANALYZE=true npm run build",
-    "test:safe": "jest --runInBand --detectLeaks --forceExit"
+    "test:safe": "jest --runInBand --detectLeaks --forceExit",
+    "create-test-users": "npx ts-node scripts/create-unified-test-users.ts",
+    "test:role-based": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.role-based.ts"
   },
   "dependencies": {
     "@genkit-ai/firebase": "^1.14.0",
