feat: Refactor branch structure to workshop/** model
- Update all workflow triggers to use workshop/** branches
- Rename infrastructure/deployment-ready → workshop/deployment-ready
- Update pre-deployment to use staging branch
- Add workshop management npm scripts
- Simplify branch structure: workshop → staging → master (PR only)

--- a/.github/workflows/feature-performance-ci-cd.yml
+++ b/.github/workflows/feature-performance-ci-cd.yml
@@ -3,12 +3,12 @@ name: 🚀 Feature/Performance Branch CI/CD Pipeline
 on:
   push:
     branches: 
-      - feature/performance-optimization-mobile-enhancement
-      - feature/performance-*
+      - workshop/performance
+      - workshop/*
   pull_request:
     branches: 
       - master
-      - preDeploy
+      - staging
     types: [opened, synchronize, reopened]
 
 env:
