--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "test:accessibility": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --grep accessibility",
     "test:performance": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --grep performance",
     "test:critical": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --grep critical",
-    "test:preview": "cross-env NODE_OPTIONS='--max-old-space-size=2048' TEST_BASE_URL=https://rankpilot-h3jpc--performance-testing-mw0cwov5.web.app playwright test",
+    "test:preview": "cross-env NODE_OPTIONS='--max-old-space-size=2048' TEST_BASE_URL=https://rankpilot-h3jpc--workshop-testing-mw0cwov5.web.app playwright test",
     "precommit": "npm run lint:fix && npm run typecheck && npm run optimize",
     "test": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test",
     "test:production": "cross-env NODE_OPTIONS='--max-old-space-size=2048' TEST_BASE_URL=https://rankpilot-h3jpc.web.app playwright test",
+    "test:staging": "cross-env NODE_OPTIONS='--max-old-space-size=2048' TEST_BASE_URL=https://staging.rankpilot.com playwright test",
     "deploy:instant": "./scripts/deploy-lean-instant.ps1",
     "deploy:instant-skip-build": "./scripts/deploy-lean-instant.ps1 -SkipBuild",
     "hyperloop": "git push && npm run deploy:instant",
@@ -39,6 +40,11 @@
     "hyperloop:dev:bash": "bash ./pilotScripts/workflow/hyperloop-dev.sh",
     "hyperloop:linux": "bash ./pilotScripts/workflow/hyperloop-linux.sh",
     "hyperloop:docs": "code ./docs/DEVELOPMENT_HYPERLOOP.md",
+    "workshop:performance": "git checkout workshop/performance && git push origin workshop/performance",
+    "workshop:deployment": "git checkout workshop/deployment-ready && git push origin workshop/deployment-ready",
+    "workshop:create": "git checkout -b workshop/$npm_config_name && git push origin workshop/$npm_config_name",
+    "staging:promote": "git checkout staging && git merge workshop/$npm_config_from && git push origin staging",
+    "production:release": "gh pr create --base master --head staging --title 'Production Release: $(date +%Y-%m-%d)' --body 'Ready for production deployment'",
     "test:lean": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test -c playwright.config.lean.ts",
     "test:lean:url": "cross-env NODE_OPTIONS='--max-old-space-size=2048' TEST_URL=$(firebase hosting:channel:list --project rankpilot-h3jpc --json | grep -o '\"url\":\"[^\"]*' | head -1 | cut -d'\"' -f4) playwright test -c playwright.config.lean.ts"
   },
