feat: Add workflow distribution plan and rename workflows
🏗️ WORKFLOW ORGANIZATION IMPROVEMENTS:
✅ Renamed workflows with stage-purpose-effect naming convention
✅ Created comprehensive workflow distribution plan
✅ Prepared for branch-specific workflow isolation

📋 NEW WORKFLOW NAMES:
- dev-workshop-instant-preview.yml (workshop development)
- dev-preview-validation.yml (preview validation)
- dev-performance-optimization.yml (performance testing)
- integration-workshop-promote.yml (workshop → deployment-ready)
- integration-staging-promote.yml (deployment-ready → staging)
- staging-comprehensive-validation.yml (staging validation)
- staging-production-readiness-alert.yml (production alerts)
- production-master-deploy.yml (production deployment)
- manual-preview-deploy.yml (manual deployments)

🎯 NEXT: Implement branch-specific workflow distribution for maximum isolation

--- a/.github/workflows/dev-preview-validation.yml
+++ b/.github/workflows/dev-preview-validation.yml
@@ -1,8 +1,8 @@
-name: 🧪 Development Hyperloop - Lean Channel Tests
+name: 🧪 Preview Stage - Validation & Testing
 
 on:
   workflow_run:
-    workflows: ["🚀 Development Hyperloop - Instant Lean Deploy"]
+    workflows: ["🏗️ Workshop Stage - Instant Preview Deploy"]
     types:
       - completed
   repository_dispatch:
