🎯 COMPLETE: New Architecture Implementation
✅ Performance = MAIN HUB (receives all workshop/** auto-merges)
✅ Performance → Deployment-Ready (comprehensive integration testing)
✅ Deployment-Ready → Staging (final validation + auto-deploy)
✅ Staging → Master (manual PR approval for live production)

📊 NEW ARCHITECTURE FLOW:
workshop/** → performance (MAIN HUB) → deployment-ready → staging → master

🔄 Auto-Merge Pipeline:
- workshop/feature → workshop/performance (auto-merge with integration tests)
- workshop/performance → workshop/deployment-ready (comprehensive testing)
- workshop/deployment-ready → staging (final validation + auto-deploy)
- staging → master (MANUAL PR approval required)

🚀 Complete architectural restructure with performance as main integration hub

--- a/.github/workflows/production-deploy.yml
+++ b/.github/workflows/production-deploy.yml
@@ -1,7 +1,8 @@
-# 🚀 Production Deployment Workflow
-# Deploys master branch to production environment
-# Triggered on push to master or manual dispatch
-name: "🏭 Production Deployment"
+# 🚀 Production Deployment Workflow (Live Production)
+# Final step: staging → master (Manual PR approval required)
+# Deploys master branch to live production environment
+# Triggered ONLY on push to master (after manual PR approval from staging)
+name: "🏭 Production Stage - Live Production Deployment"
 
 on:
   push:
