🚀 Performance Testing Infrastructure + New Firebase Functions
✨ Features Added:
• Comprehensive production testing suite (6 test files)
• Performance-focused Firebase Functions (monitoring, health checks)
• Enhanced keyword suggestions with caching
• Multi-environment Playwright configurations
• Security middleware and error tracking

🧪 Testing Infrastructure:
• Production test suite with health checks
• Performance baseline measurement
• Database security validation
• NeuroSEO™ suite integration tests
• Mobile responsiveness testing

⚙️ Firebase Functions:
• Performance monitoring dashboard
• Real-time metrics collection
• Enhanced keyword suggestions API
• Health check endpoints
• Production-ready error handling

🎯 Ready for Development Hyperloop deployment and testing

--- a/package.json
+++ b/package.json
@@ -90,6 +90,26 @@
     "test:comprehensive:features": "bash scripts/run-comprehensive-tests.sh --suite features",
     "test:comprehensive:headed": "bash scripts/run-comprehensive-tests.sh --suite all --headed",
     "test:comprehensive:production": "bash scripts/run-comprehensive-tests.sh --suite all --production",
+    "test:performance-suite": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.performance.ts production-test-suite.spec.ts",
+    "test:testing-suite": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.testing.ts production-test-suite.spec.ts",
+    "test:dev-suite": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.dev.ts production-test-suite.spec.ts",
+    "test:firebase-functions": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.performance.ts firebase-functions-integration.spec.ts",
+    "test:firebase-functions:testing": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.testing.ts firebase-functions-integration.spec.ts",
+    "test:firebase-functions:dev": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.dev.ts firebase-functions-integration.spec.ts",
+    "test:neuroseo-suite": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.performance.ts neuroseo-suite-tests.spec.ts",
+    "test:neuroseo-suite:testing": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.testing.ts neuroseo-suite-tests.spec.ts",
+    "test:frontend-integration": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.performance.ts frontend-integration-tests.spec.ts",
+    "test:frontend-integration:testing": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.testing.ts frontend-integration-tests.spec.ts",
+    "test:frontend-integration:dev": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.dev.ts frontend-integration-tests.spec.ts",
+    "test:database-security": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.performance.ts database-security-tests.spec.ts",
+    "test:database-security:testing": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.testing.ts database-security-tests.spec.ts",
+    "test:load-testing": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.performance.ts production-load-tests.spec.ts",
+    "test:load-testing:testing": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.testing.ts production-load-tests.spec.ts",
+    "test:performance-all": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.performance.ts --reporter=html",
+    "test:testing-all": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.testing.ts --reporter=html",
+    "test:dev-all": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.dev.ts --reporter=html",
+    "test:performance-parallel": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.performance.ts --workers=4",
+    "test:performance-ci": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.performance.ts --reporter=line",
     "analyze": "cross-env ANALYZE=true npm run build",
     "test:safe": "jest --runInBand --detectLeaks --forceExit",
     "create-test-users": "npx ts-node scripts/create-unified-test-users.ts",
