--- a/functions/package.json
+++ b/functions/package.json
@@ -34,14 +34,20 @@
     "zod-to-json-schema": "^3.24.6"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.16",
     "@types/cors": "^2.8.19",
+    "@types/mocha": "^10.0.7",
     "@types/node-fetch": "^2.6.12",
+    "@types/sinon": "^17.0.3",
     "@typescript-eslint/eslint-plugin": "^8.35.0",
     "@typescript-eslint/parser": "^8.35.0",
+    "chai": "^4.4.1",
     "cross-env": "^7.0.3",
     "eslint": "^9.29.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.32.0",
+    "mocha": "^10.6.0",
+    "sinon": "^18.0.0",
     "typescript": "^5.5.4"
   },
   "private": true
