feat: Remove deprecated activity schema fix script and add new TypeScript EPIPE error handling scripts
- Deleted `fix-activity-schema-conflicts.js` as it is no longer needed.
- Introduced `fix-typescript-epipe-v2.js` for enhanced TypeScript EPIPE error handling with better process management.
- Added `fix-typescript-epipe-v3.js` for a simplified and robust approach to fixing TypeScript EPIPE errors.
- Created `fix-typescript-epipe.js` for resolving common TypeScript language server EPIPE errors.
- Added `quick-typescript-restart.js` for a quick TypeScript restart utility.
- Introduced `restart-typescript.js` for restarting the TypeScript Language Server.
- Updated `memory-optimization.ts` to improve process termination handling.
- Enhanced documentation and logging for better user guidance during error resolution.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "build:fast": "cross-env NODE_OPTIONS='--max-old-space-size='6144 ESLINT_NO_DEV_ERRORS=true next build",
     "build:emergency": "cross-env ESLINT_NO_DEV_ERRORS=true DISABLE_ESLINT=true node scripts/build-skip-typecheck.js",
     "build:production": "npm run clean && npm run optimize && npm run build",
+    "fix:typescript-epipe": "node scripts/fix-typescript-epipe-v3.js",
+    "fix:typescript-epipe:v2": "node scripts/fix-typescript-epipe-v2.js",
+    "fix:typescript-epipe:v1": "node scripts/fix-typescript-epipe.js",
+    "restart:typescript": "node scripts/quick-typescript-restart.js",
     "start": "cross-env NODE_OPTIONS='--max-old-space-size=2048' next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
