🔧 fix: Enable Firebase webframeworks experiment for Next.js deployment
- Add FIREBASE_CLI_EXPERIMENTS: webframeworks to deployment step
- Resolves 'Cannot deploy a web framework from source' error
- Required for Next.js framework deployment to Firebase hosting

--- a/.github/workflows/dev-workshop-instant-preview.yml
+++ b/.github/workflows/dev-workshop-instant-preview.yml
@@ -83,6 +83,8 @@ jobs:
           projectId: ${{ env.FIREBASE_PROJECT_ID }}
           channelId: ${{ steps.branch-name.outputs.CHANNEL_ID }}
           expires: 1d
+        env:
+          FIREBASE_CLI_EXPERIMENTS: webframeworks
       
       - name: 📊 Deployment Summary
         run: |
