--- a/.github/workflows/deployment-ready-to-staging.yml
+++ b/.github/workflows/deployment-ready-to-staging.yml
@@ -15,6 +15,10 @@ on:
 env:
   NODE_VERSION: '20.x'
   FIREBASE_PROJECT_ID: 'rankpilot-h3jpc'
+  # Centralized Environment URLs
+  LEAN_URL: 'https://rankpilot-h3jpc--lean-branch-testing-o2qips67.web.app'
+  PERFORMANCE_URL: 'https://rankpilot-h3jpc--performance-testing-mw0cwov5.web.app'
+  PRODUCTION_URL: 'https://rankpilot-h3jpc.web.app'
 
 jobs:
   final-validation-testing:
