--- a/package.json
+++ b/package.json
@@ -76,20 +76,28 @@
     "test:api": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.role-based.ts --project=api-testing",
     "test:accessibility": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.role-based.ts --project=accessibility",
     "test:performance": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.role-based.ts --project=legacy-tests testing/specs/main/performance.spec.ts",
+    "test:lean": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.lean.ts",
+    "test:lean-critical": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.lean.ts --project=lean-critical",
+    "test:lean-mobile": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.lean.ts --project=lean-mobile",
+    "test:lean-performance": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.lean.ts --project=lean-performance",
+    "test:performance-critical": "cross-env NODE_OPTIONS='--max-old-space-size=3072' playwright test --config=playwright.config.performance.ts --project=performance-critical",
+    "test:performance-mobile": "cross-env NODE_OPTIONS='--max-old-space-size=3072' playwright test --config=playwright.config.performance.ts --project=performance-mobile",
+    "test:performance-load": "cross-env NODE_OPTIONS='--max-old-space-size=3072' playwright test --config=playwright.config.performance.ts --project=performance-load",
+    "test:performance-full": "cross-env NODE_OPTIONS='--max-old-space-size=4096' playwright test --config=playwright.config.performance.ts",
     "test:features": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.role-based.ts --project=legacy-tests testing/specs/main/features/",
-    "test:ai-heavy": "cross-env NODE_OPTIONS='--max-old-space-size=1024' playwright test --config=playwright.config.ai-heavy.ts --workers=1",
+    "test:ai-heavy": "cross-env NODE_OPTIONS='--max-old-space-size=3072' playwright test --config=playwright.config.ai-heavy.ts --workers=1",
     "test:production": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.production-validation.ts",
     "test:security": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.production-validation.ts --project=security-tests",
     "test:load": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.production-validation.ts --project=load-tests",
     "test:mobile-compatibility": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.production-validation.ts --project=mobile-compatibility",
-    "test:content-analyzer": "cross-env NODE_OPTIONS='--max-old-space-size=1024' playwright test --config=playwright.config.ai-heavy.ts --workers=1 testing/specs/main/features/content-analyzer.spec.ts",
+    "test:content-analyzer": "cross-env NODE_OPTIONS='--max-old-space-size=3072' playwright test --config=playwright.config.ai-heavy.ts --workers=1 testing/specs/main/features/content-analyzer.spec.ts",
     "test:warmed": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.warming.ts",
     "test:warmed:content-analyzer": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.warming.ts testing/specs/main/features/content-analyzer-warmed.spec.ts",
     "test:warmed:features": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.warming.ts testing/specs/main/features/",
     "test:warmed:fast": "cross-env NODE_OPTIONS='--max-old-space-size=1536' playwright test --config=playwright.config.warming.ts --project=warmed-tests",
-    "test:high-memory": "cross-env NODE_OPTIONS='--max-old-space-size=6144' playwright test --config=playwright.config.high-memory.ts",
-    "test:high-memory:content-analyzer": "cross-env NODE_OPTIONS='--max-old-space-size=6144' playwright test --config=playwright.config.high-memory.ts testing/specs/main/features/content-analyzer-high-memory.spec.ts",
-    "test:high-memory:cached": "cross-env NODE_OPTIONS='--max-old-space-size=6144' playwright test --config=playwright.config.high-memory.ts --project=high-memory-desktop",
+    "test:high-memory": "cross-env NODE_OPTIONS='--max-old-space-size=4096' playwright test --config=playwright.config.high-memory.ts",
+    "test:high-memory:content-analyzer": "cross-env NODE_OPTIONS='--max-old-space-size=4096' playwright test --config=playwright.config.high-memory.ts testing/specs/main/features/content-analyzer-high-memory.spec.ts",
+    "test:high-memory:cached": "cross-env NODE_OPTIONS='--max-old-space-size=4096' playwright test --config=playwright.config.high-memory.ts --project=high-memory-desktop",
     "test:e2e": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.role-based.ts --project=legacy-tests testing/specs/main/public-pages-e2e.spec.ts",
     "test:critical": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.role-based.ts --project=legacy-tests --workers=1 testing/specs/main/auth-consolidated.spec.ts testing/specs/main/accessibility.spec.ts testing/specs/main/performance.spec.ts",
     "test:critical:sequential": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.role-based.ts --project=legacy-tests --workers=1 --fully-parallel=false testing/specs/main/auth-consolidated.spec.ts && cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.role-based.ts --project=legacy-tests --workers=1 testing/specs/main/accessibility.spec.ts && cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.role-based.ts --project=legacy-tests --workers=1 testing/specs/main/performance.spec.ts",
