--- a/.github/workflows/dev-workshop-instant-preview.yml
+++ b/.github/workflows/dev-workshop-instant-preview.yml
@@ -19,6 +19,10 @@ env:
   NODE_VERSION: '20.x'
   FIREBASE_PROJECT_ID: 'rankpilot-h3jpc'
   NODE_OPTIONS: '--max-old-space-size=4096'
+  # Centralized Environment URLs
+  LEAN_URL: 'https://rankpilot-h3jpc--lean-branch-testing-o2qips67.web.app'
+  PERFORMANCE_URL: 'https://rankpilot-h3jpc--performance-testing-mw0cwov5.web.app'
+  PRODUCTION_URL: 'https://rankpilot-h3jpc.web.app'
 
 jobs:
   instant-deploy:
