🔧 fix(ci/cd): Add missing Playwright browsers and deployment to performance workflow
🚀 Key Fixes:
- Add Playwright browser installation (chromium + deps) to prevent test failures
- Add push trigger for workshop/performance branch for autonomous CI/CD
- Add Firebase deployment step to performance-testing channel
- Add deployment propagation wait for reliable testing

🧪 Testing Improvements:
- Install chromium browser before running performance tests
- Deploy to performance environment before testing (test real deployment)
- Use centralized PERFORMANCE_URL environment variable
- Ensure tests run against freshly deployed code with updated CSP

🎯 CI/CD Enhancement:
- Enable autonomous deployment on workshop/performance pushes
- Maintain deployment → test → promote workflow
- Fix browser executable missing error from previous run
- Support full performance validation pipeline

This resolves the 'Executable doesn't exist at chromium_headless_shell' error and enables autonomous performance environment updates with latest CSP configuration.

--- a/.github/workflows/dev-performance-optimization.yml
+++ b/.github/workflows/dev-performance-optimization.yml
@@ -1,6 +1,9 @@
 name: ⚡ Dev Stage - Performance Optimization
 
 on:
+  push:
+    branches:
+      - workshop/performance
   pull_request:
     branches: 
       - staging
@@ -49,6 +52,12 @@ jobs:
           npm ci --legacy-peer-deps --prefer-offline
           echo "✅ Dependencies installed with performance optimization"
 
+      - name: 🎭 Install Playwright Browsers
+        run: |
+          npx playwright install chromium
+          npx playwright install-deps
+          echo "✅ Playwright browsers installed for performance testing"
+
       - name: 🔍 Performance-Specific Linting
         run: |
           npm run lint
@@ -58,6 +67,19 @@ jobs:
         run: |
           npm run build
           echo "✅ Performance-optimized build completed"
+
+      - name: 🚀 Deploy to Performance Testing Channel
+        run: |
+          npx firebase-tools deploy --only hosting:rankpilot-h3jpc:performance-testing --project rankpilot-h3jpc
+          echo "✅ Deployed to performance testing environment: ${{ env.PERFORMANCE_URL }}"
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+
+      - name: ⏱️ Wait for Deployment Propagation
+        run: |
+          echo "⏱️ Waiting for deployment to propagate..."
+          sleep 30
+          echo "✅ Deployment propagation complete"
 
       - name: 🧪 Core Web Vitals Testing
         run: |
