🚨 fix(ci/cd): CRITICAL - Add missing push event condition to performance workflow
🔥 CRITICAL FIX:
- Performance workflow was not running on push events
- Added 'github.event_name == push' to if condition
- This was causing performance environment to never update with latest CSP fixes

🎯 Impact:
- Performance environment stuck with old CSP configuration
- Firebase initialization failing due to missing domains:
  - https://apis.google.com (Firebase APIs)
  - https://js.stripe.com (Stripe integration)
  - https://www.google.com (Google services)
  - https://www.gstatic.com (Google static assets)

✅ Resolution:
- Performance workflow will now run on push to workshop/performance
- Will deploy updated next.config.ts with complete CSP policy
- Authentication tests will pass once CSP is fixed

This resolves login test failures by ensuring performance environment gets CSP updates.

--- a/.github/workflows/dev-performance-optimization.yml
+++ b/.github/workflows/dev-performance-optimization.yml
@@ -32,7 +32,7 @@ jobs:
   performance-validation:
     name: 🎯 Performance Feature Validation
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request' || (github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success')
+    if: github.event_name == 'push' || github.event_name == 'pull_request' || (github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success')
     
     steps:
       - name: 📥 Checkout Feature Branch
