--- a/.github/workflows/dev-performance-optimization.yml
+++ b/.github/workflows/dev-performance-optimization.yml
@@ -69,11 +69,28 @@ jobs:
           echo "✅ Performance-optimized build completed"
 
       - name: 🚀 Deploy to Performance Testing Channel
-        run: |
-          npx firebase-tools deploy --only hosting:rankpilot-h3jpc:performance-testing --project rankpilot-h3jpc
-          echo "✅ Deployed to performance testing environment: ${{ env.PERFORMANCE_URL }}"
+        id: deploy-performance
+        uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          repoToken: ${{ secrets.GITHUB_TOKEN }}
+          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_RANKPILOT_H3JPC }}
+          projectId: ${{ env.FIREBASE_PROJECT_ID }}
+          channelId: performance-testing
+          expires: 30d
         env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+          FIREBASE_CLI_EXPERIMENTS: webframeworks
+          NEXT_PUBLIC_RECAPTCHA_SITE_KEY: ${{ secrets.NEXT_PUBLIC_RECAPTCHA_SITE_KEY }}
+          NEXT_PUBLIC_FIREBASE_API_KEY: ${{ secrets.NEXT_PUBLIC_FIREBASE_API_KEY }}
+          NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN: ${{ secrets.NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN }}
+          NEXT_PUBLIC_FIREBASE_PROJECT_ID: ${{ secrets.NEXT_PUBLIC_FIREBASE_PROJECT_ID }}
+          NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET: ${{ secrets.NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET }}
+          NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID }}
+          NEXT_PUBLIC_FIREBASE_APP_ID: ${{ secrets.NEXT_PUBLIC_FIREBASE_APP_ID }}
+
+      - name: ✅ Performance Environment Deployed
+        run: |
+          echo "✅ Deployed to performance testing environment: ${{ env.PERFORMANCE_URL }}"
+          echo "📊 Environment ready for performance validation"
 
       - name: ⏱️ Wait for Deployment Propagation
         run: |
