--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dev:clean": "npm run clean && cross-env NODE_OPTIONS='--max-old-space-size=3072' next dev",
     "genkit:dev": "cross-env NODE_OPTIONS='--max-old-space-size=2048' genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "cross-env NODE_OPTIONS='--max-old-space-size=2048' genkit start -- tsx --watch src/ai/dev.ts",
-    "build": "cross-env NODE_OPTIONS='--max-old-space-size=3072' ESLINT_NO_DEV_ERRORS=true next build",
+    "build": "next build",
+    "build:dev": "cross-env NODE_OPTIONS='--max-old-space-size=3072' ESLINT_NO_DEV_ERRORS=true next build",
     "build:analyze": "cross-env ANALYZE=true NODE_OPTIONS='--max-old-space-size=3072' ESLINT_NO_DEV_ERRORS=true next build",
     "build:fast": "cross-env NODE_OPTIONS='--max-old-space-size=3072' ESLINT_NO_DEV_ERRORS=true next build",
     "build:emergency": "cross-env ESLINT_NO_DEV_ERRORS=true DISABLE_ESLINT=true node scripts/build-skip-typecheck.js",
