--- a/.github/workflows/dev-performance-optimization.yml
+++ b/.github/workflows/dev-performance-optimization.yml
@@ -63,9 +63,10 @@ jobs:
           npm run lint
           echo "✅ Performance code quality validated"
 
-      - name: 🏗️ Build with Performance Monitoring
+      - name: 🔧 Build for Performance Testing  
         run: |
-          npm run build:dev
+          echo "🚀 Starting performance-optimized build..."
+          npm run build:firebase
           echo "✅ Performance-optimized build completed"
 
       - name: 🚀 Deploy to Performance Testing Channel
@@ -80,6 +81,8 @@ jobs:
           entryPoint: '.'
         env:
           FIREBASE_CLI_EXPERIMENTS: webframeworks
+          FIREBASE_DEPLOY: true
+          NODE_ENV: production
           NEXT_PUBLIC_RECAPTCHA_SITE_KEY: ${{ secrets.NEXT_PUBLIC_RECAPTCHA_SITE_KEY }}
           NEXT_PUBLIC_FIREBASE_API_KEY: ${{ secrets.NEXT_PUBLIC_FIREBASE_API_KEY }}
           NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN: ${{ secrets.NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN }}
