--- a/firebase.json
+++ b/firebase.json
@@ -16,11 +16,17 @@
       "firebase-debug.*.log",
       "*.local"
     ],
-    "predeploy": ["npm --prefix \"$RESOURCE_DIR\" run build"]
+    "predeploy": [
+      "npm --prefix \"$RESOURCE_DIR\" run build 2>/dev/null || npm --prefix \"$RESOURCE_DIR\" run build"
+    ]
   },
   "hosting": {
     "source": ".",
-    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
     "frameworksBackend": {
       "region": "australia-southeast2",
       "secrets": [
