--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "genkit:watch": "cross-env NODE_OPTIONS='--max-old-space-size=2048' genkit start -- tsx --watch src/ai/dev.ts",
     "build": "next build",
     "build:dev": "cross-env NODE_OPTIONS='--max-old-space-size=6144' NODE_ENV=development next build",
-    "build:firebase": "node scripts/firebase-deploy-clean.js && cross-env FIREBASE_DEPLOY=true NODE_ENV=production next build --config next.config.firebase.ts",
+    "build:firebase": "cross-env FIREBASE_DEPLOY=true NODE_ENV=production next build",
     "build:analyze": "cross-env ANALYZE=true NODE_OPTIONS='--max-old-space-size=3072' ESLINT_NO_DEV_ERRORS=true next build",
     "build:fast": "cross-env NODE_OPTIONS='--max-old-space-size=3072' ESLINT_NO_DEV_ERRORS=true next build",
     "build:emergency": "cross-env ESLINT_NO_DEV_ERRORS=true DISABLE_ESLINT=true node scripts/build-skip-typecheck.js",
