--- a/.github/workflows/dev-performance-optimization.yml
+++ b/.github/workflows/dev-performance-optimization.yml
@@ -79,6 +79,7 @@ jobs:
           channelId: performance-testing
           expires: 30d
           entryPoint: '.'
+          target: hosting
         env:
           FIREBASE_CLI_EXPERIMENTS: webframeworks
           FIREBASE_DEPLOY: true
